objects/Success_Factor__c.object
<CustomObject>
    <fields>
        <fullName>AVM_OAV_Difference__c</fullName>
        <description>Difference between Average AVM and Final OAV</description>
        <formula>IF(AND(NOT(ISBLANK(Opportunity__c)),NOT(ISBLANK(Opportunity__r.Property__c)),
NOT(ISBLANK(Opportunity__r.Property__r.Average_AVM__c)), Opportunity__r.Property__r.Average_AVM__c &gt; 0), 
						 ABS((Opportunity__r.Final_OAV_Calculation__c - Opportunity__r.Property__r.Average_AVM__c) / Opportunity__r.Property__r.Average_AVM__c) 
, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AVM OAV Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>All_Requirements_Cleared__c</fullName>
        <formula>Cleared_Requirement_Count__c =  Total_Requirements__c
&amp;&amp;
Total_Requirements__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All Requirements Cleared</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cleared_Requirement_Count__c</fullName>
        <label>Cleared Requirement Count</label>
        <summarizedField>Current_Conditions__c.Record_Count__c</summarizedField>
        <summaryFilterItems>
            <field>Current_Conditions__c.Status__c</field>
            <operation>contains</operation>
            <value>Completed, Waived</value>
        </summaryFilterItems>
        <summaryForeignKey>Current_Conditions__c.Success_Factor__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Create_Success_Factor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Success Factor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Documents_Ready_for_Review__c</fullName>
        <label>Documents Ready for Review</label>
        <summaryFilterItems>
            <field>Current_Conditions__c.Status__c</field>
            <operation>equals</operation>
            <value>Document Ready for Review</value>
        </summaryFilterItems>
        <summaryForeignKey>Current_Conditions__c.Success_Factor__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FICO_Credit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>this field is so we can check if fico change on oppotunity object</description>
        <label>FICO Credit</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Success Factors (FICO Credit)</relationshipLabel>
        <relationshipName>Success_Factors1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_ID__c</fullName>
        <formula>Lead__r.Case_Safe_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Status__c</fullName>
        <formula>TEXT(Lead__r.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Risk_Factors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Status__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Risk_Factors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HB</fullName>
                </value>
                <value>
                    <fullName>HO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Requirement Blocked</fullName>
                    <label>Blocked</label>
                </value>
                <value>
                    <fullName>Cleared</fullName>
                    <isActive>false</isActive>
                    <label>Cleared</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Success_Factor_Created_Date_Time__c</fullName>
        <label>Success Factor Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Success_Factor__c</fullName>
        <label>Success Factor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash to Consumer</fullName>
                    <label>Net Cash to Partner</label>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>DTI</fullName>
                </value>
                <value>
                    <fullName>LTV</fullName>
                </value>
                <value>
                    <fullName>OAV</fullName>
                </value>
                <value>
                    <fullName>Property Ownership</fullName>
                </value>
                <value>
                    <fullName>Program</fullName>
                </value>
                <value>
                    <fullName>Closing</fullName>
                </value>
                <value>
                    <fullName>Post-Closing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Requirements__c</fullName>
        <label>Total Requirements</label>
        <summarizedField>Current_Conditions__c.Record_Count__c</summarizedField>
        <summaryForeignKey>Current_Conditions__c.Success_Factor__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>lead_sf_count__c</fullName>
        <formula>Lead__r.Count_Success_Factors__c  &gt;= 10</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>lead sf count</label>
        <type>Checkbox</type>
    </fields>
    <label>Success Factor</label>
    <nameField>
        <displayFormat>SF-{00000}</displayFormat>
        <label>Success Factor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Success Factors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cannot_clear_post_close_in_closing</fullName>
        <active>true</active>
        <description>Post close Success Factor has to remain in progress during the Closing stage.</description>
        <errorConditionFormula>AND( ISPICKVAL(Success_Factor__c  , "Post-Closing"),
 ISPICKVAL( Status__c , "Completed"),
 ISPICKVAL(Opportunity__r.StageName, "Closing") 
)</errorConditionFormula>
        <errorMessage>Post-Close Success Factor should not be completed in the opportunity stage, Closing.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_move_Success_Factors_backwards</fullName>
        <active>true</active>
        <description>Cannot move to Closing if LTV, DTI, Property Ownership, Credit, OAV, Net Cash to Partner are pending.</description>
        <errorConditionFormula>ISPICKVAL( Opportunity__r.StageName ,"Closing") 

&amp;&amp; 

(OR(ISPICKVAL( Status__c ,"In Progress" ), 
ISPICKVAL( Status__c ,"Requirement Blocked" ))

&amp;&amp;

ISCHANGED(Status__c )

&amp;&amp; 

OR(ISPICKVAL( Success_Factor__c ,"DTI"), 
ISPICKVAL( Success_Factor__c ,"LTV"), 
ISPICKVAL( Success_Factor__c ,"OAV"), 
ISPICKVAL( Success_Factor__c ,"Property Ownership"), 
ISPICKVAL( Success_Factor__c ,"Program"), 
ISPICKVAL( Success_Factor__c ,"Credit"), 
ISPICKVAL( Success_Factor__c ,"Cash to Consumer")))</errorConditionFormula>
        <errorMessage>Cannot change the status of success factor once passed IDD</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DTI_Cleared</fullName>
        <active>true</active>
        <description>Post-Close BE DTI cannot be greater than Max Authorized DTI</description>
        <errorConditionFormula>ISPICKVAL( Success_Factor__c, "DTI") 
&amp;&amp;
ISPICKVAL(  Status__c , "Completed")
&amp;&amp;
Opportunity__r.Post_Close_BE_Ratio__c &gt; Opportunity__r.Maximum_Authorized_DTI__c
&amp;&amp;
Opportunity__r.Maximum_Authorized_DTI__c &gt; 0</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>The post-close back-end DTI currently exceeds the maximum authorized DTI.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LTV_Cleared</fullName>
        <active>true</active>
        <description>Post Close LTV cannot be greater than MAD Pct</description>
        <errorConditionFormula>ISPICKVAL( Success_Factor__c, "LTV") 
&amp;&amp;
ISPICKVAL(  Status__c , "Completed")
&amp;&amp;
Opportunity__r.Post_Close_LTV2__c  &gt;  Opportunity__r.MAD__c</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>The post-close LTV currently exceeds the MAD percentage.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Requirements_must_be_complete</fullName>
        <active>true</active>
        <description>Requirements must be completed prior to completing Success Factors</description>
        <errorConditionFormula>Total_Requirements__c &lt;&gt; Cleared_Requirement_Count__c 
&amp;&amp; 

OR(ISPICKVAL(Status__c, "Completed"), 
ISPICKVAL(Status__c, "Waived"))</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Must complete all Requirements</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Success_Factor_Status_Validation</fullName>
        <active>true</active>
        <description>Success Factors can only be cleared (manually or otherwise) if requirements are in Completed or Waived status.</description>
        <errorConditionFormula>IF(AND(ISPICKVAL(Opportunity__r.StageName, 'Investment Due Diligence'), ISPICKVAL( Status__c, 'Completed'), OR(ISPICKVAL(Success_Factor__c, 'Closing'), ISPICKVAL(Success_Factor__c, 'Post-Closing'))),true, false)</errorConditionFormula>
        <errorMessage>Success Factors should not be Completed for Closing and Post Closing in IDD.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Success_factor_Status_Credit</fullName>
        <active>true</active>
        <description>Success factor Credit status need to be manually set to “In Progress”.</description>
        <errorConditionFormula>AND( 
ISPICKVAL( Success_Factor__c, "Credit"), 
ISCHANGED(  FICO_Credit__c ),
ISPICKVAL( Status__c , "Completed"))</errorConditionFormula>
        <errorMessage>The Credit Success_factor_Status_Success Factor status will need to be manually set to “In Progress”.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Variance_Description_Is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
				ISCHANGED(Status__c),
				ISPICKVAL(Status__c, 'Completed'),
				ISPICKVAL(Success_Factor__c, 'OAV'),
				AVM_OAV_Difference__c &gt; 0.1,
				NOT(ISBLANK(Opportunity__c)),
				ISBLANK(Opportunity__r.Variance_Description__c)
			)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Please select one or more reasons for variance between Average AVM and Final OAV</errorMessage>
    </validationRules>
</CustomObject>